# hector_gamepad_manager

./: .gitignore  .pre-commit-config.yaml  README.md  Readme.md  dependencies.repos
.github/workflows/: lint_build_test.yaml
fake_joy_publisher/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
fake_joy_publisher/fake_joy_publisher/: fake_joy_publisher.py
fake_joy_publisher/test/: test_fake_joy_publisher.py  test_flake8.py
hector_gamepad_manager/: CMakeLists.txt  package.xml
hector_gamepad_manager/config/: athena.yaml  athena_plugin_config.yaml  config_switches.yaml  driving.yaml  driving_simple.yaml  ec_scout.yaml  ec_scout_plugin_config.yaml  ec_swift.yaml  ec_swift_plugin_config.yaml  gamepad_mappings.yaml  manipulation.yaml  plugin_parameters_athena.yaml  view_control.yaml
hector_gamepad_manager/include/hector_gamepad_manager/: gamepad_function_plugin.hpp  hector_gamepad_manager.hpp
hector_gamepad_manager/launch/: hector_gamepad_manager.launch.yaml  hector_gamepad_manager_launch.yaml
hector_gamepad_manager/log/: latest_list
hector_gamepad_manager/src/: hector_gamepad_manager.cpp  hector_gamepad_manager_node.cpp
hector_gamepad_manager/test/: README.md  main.cpp  test_hector_gamepad_manager.cpp  test_hector_gamepad_manager.launch.py  test_hector_gamepad_manager_double_press.cpp  test_hector_gamepad_manager_internal.cpp  test_hector_gamepad_manager_malformed.cpp
hector_gamepad_manager/test/config/: athena.yaml  athena_plugin_config.yaml  driving.yaml  manager_internal.yaml  manager_internal_alt.yaml  manager_internal_double_press.yaml  manager_internal_double_press_alt.yaml  manager_internal_double_press_params.yaml  manager_internal_double_press_switches.yaml  manager_internal_malformed.yaml  manager_internal_malformed_params.yaml  manager_internal_malformed_switches.yaml  manager_internal_params.yaml  manager_internal_switches.yaml  manager_internal_zero_window_params.yaml  manipulation.yaml
hector_gamepad_manager_interface/: CMakeLists.txt  README.md  package.xml
hector_gamepad_manager_interface/include/hector_gamepad_manager_interface/: gamepad_plugin_interface.hpp
hector_gamepad_manager_interface/src/: gamepad_plugin_interface.cpp
hector_gamepad_manager_plugins/: CMakeLists.txt  README.md  package.xml  plugins.xml  plugins_test.xml
hector_gamepad_manager_plugins/include/hector_gamepad_manager_plugins/: battery_monitor_plugin.hpp  blackboard_plugin.hpp  controller_helper.hpp  drive_plugin.hpp  flipper_plugin.hpp  manipulation_plugin.hpp  moveit_helper.hpp  moveit_plugin.hpp  test_probe_plugin.hpp  view_control_plugin.hpp  virtual_camera_plugin.hpp
hector_gamepad_manager_plugins/src/: battery_monitor_plugin.cpp  blackboard_plugin.cpp  controller_helper.cpp  drive_plugin.cpp  flipper_plugin.cpp  manipulation_plugin.cpp  moveit_helper.cpp  moveit_plugin.cpp  test_probe_plugin.cpp  view_control_plugin.cpp  virtual_camera_plugin.cpp
hector_gamepad_manager_plugins/test/: test_flipper_plugin.cpp  test_moveit_plugin.cpp
hector_gamepad_manager_plugins/test/config/: moveit_plugin_test.yaml
hector_gamepad_plugin_interface/: CMakeLists.txt  README.md  package.xml
hector_gamepad_plugin_interface/include/hector_gamepad_plugin_interface/: blackboard.hpp  feedback_manager.hpp  gamepad_plugin_interface.hpp  vibration_pattern.hpp  yaml_helper.hpp
hector_gamepad_plugin_interface/src/: gamepad_plugin_interface.cpp
hector_gamepad_plugin_interface/test/: test_blackboard.cpp  test_blackboard_yaml.cpp  test_feedback_manager.cpp  test_vibration_pattern.cpp
hector_gamepad_testing_tools/: CMakeLists.txt  README.md  package.xml
hector_gamepad_testing_tools/hector_gamepad_testing_tools/: fake_joy_publisher.py
hector_gamepad_testing_tools/launch/: fake_joy_publisher_launch.yml
hector_gamepad_testing_tools/test/: test_fake_joy_publisher.py
log/: latest_list
