<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fake_joy_publisher</name>
  <version>0.0.0</version>
  <description>A library that allows to request (function, plugin) tuples from the gamepad manager. Can be used in test frameworks to emulate joy inputs</description>

  <maintainer email="aljoscha.schmidt@tu-darmstadt.de">Aljoscha Schmidt</maintainer>
  <license>TODO</license>
  <author email="aljoscha.schmidt@tu-darmstadt.de">Aljoscha Schmidt</author>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
