<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hector_gamepad_manager</name>
  <version>0.0.0</version>
  <description>Package for managing gamepad inputs</description>
  <maintainer email="simon.giegerich@stud.tu-darmstadt.de">Simon Giegerich</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hector_gamepad_plugin_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>hector_gamepad_manager_plugins</exec_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ros_testing</test_depend>
  <test_depend>rtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
