<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hector_gamepad_manager_plugins</name>
  <version>0.0.0</version>
  <description>Package with plugins for the hector_gamepad_manager package</description>
  <maintainer email="simon.giegerich@stud.tu-darmstadt.de">Simon Giegerich</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ros2_control_cmake</buildtool_depend>

  <depend>ament_cmake_gen_version_h</depend>
  <depend>controller_manager_msgs</depend>
  <depend>controller_orchestrator</depend>
  <depend>geometry_msgs</depend>
  <depend>hector_gamepad_plugin_interface</depend>
  <depend>hector_ros2_utils</depend>
  <depend>moveit_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>srdfdom</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
